<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edText_dialog_new_contact_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/dialog_new_contact_first_name"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="text" />

    <EditText
        android:id="@+id/edText_dialog_new_contact_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/dialog_new_contact_last_name"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="text" />

    <EditText
        android:id="@+id/edText_dialog_new_contact_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/dialog_new_contact_phone"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:inputType="phone" />

</LinearLayout>