<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/sms_verification_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verification.FragmentSmsVerify">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"/>

    <GridLayout
        android:columnCount="1"
        android:rowCount="7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/txtView_verify_msg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/verify_message1"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txtView_verify_msg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/verify_message2"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/background_light" />

        <EditText
            android:id="@+id/edText_verify_pass_code"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/background_dark"
            android:background="@android:color/background_light"
            android:hint="@string/activation_code"
            android:padding="5dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1" />

        <TextView
            android:id="@+id/txtView_verify_timer_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/verify_expire_message"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txtView_verify_timer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/verify_example_timer"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txtView_verify_wrong_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@color/sms_verify_wrong_number_bg"
            android:text="@string/verify_wrong_number"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="italic"
            android:textColor="@color/green" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_verify"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_column="0"
            android:layout_row="6"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="50dp"
            android:background="@drawable/sms_verification_button_states"
            android:text="@string/verify_btn_verify"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:textColor="@android:color/background_light" />

    </GridLayout>

</RelativeLayout>
