<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/sms_verification_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verification.FragmentSmsSplash">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"/>

    <GridLayout
        android:columnCount="1"
        android:rowCount="6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txtView_splash_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/intro_welcome"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txtView_splash_msg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/intro_inform_easily"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txtView_splash_msg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/intro_join_favorite"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txtView_splash_msg3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/intro_share_anything"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/background_light" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_splash_continue"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="50dp"
            android:background="@drawable/sms_verification_button_states"
            android:text="@string/intro_btn_continue"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/background_light" />

    </GridLayout>

</RelativeLayout>
