<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/sms_verification_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verification.FragmentSmsInput">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"/>

    <GridLayout
        android:columnCount="2"
        android:rowCount="4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtView_input_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/input_warning1"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/background_light" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spn_input_country"
            android:padding="2dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/background_light"
            android:layout_height="40dp"
            android:layout_width="90dp"/>

        <EditText
            android:id="@+id/edText_input_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/background_dark"
            android:background="@android:color/background_light"
            android:padding="5dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/input_edt_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_input_receive"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="50dp"
            android:background="@drawable/sms_verification_button_states"
            android:text="@string/input_btn_send"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:textColor="@android:color/background_light" />

    </GridLayout>

</RelativeLayout>
